# TenSEAL

./: .bazelrc  .clang-format  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  WORKSPACE  _config.yml  index.md  prereqs  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/workflows/: bazel_tests.yml  benchmarks.yml  codacy-analysis.yml  codeql-analysis.yml  docker-image.yml  fortify-analysis.yml  ossar-analysis.yml  publish_wheels.yml  pythonpublish-linux.yml  pythonpublish-macos.yml  pythonpublish-windows.yml  semgrep-analysis.yml  tests.yml  update-docker-image.yml  veracode-analysis.yml
.github/workflows/scripts/: build_nix.sh  build_windows.bat  depends_macos.sh  depends_ubuntu.sh  env_windows.bat  env_windows.sh  install_req_centos.sh  install_req_docker.sh  install_req_macos.sh  install_req_manylinux.sh  install_req_ubuntu.sh  install_req_windows.bat  lint.sh  lint_cpp.sh  lint_python.sh  linters.sh  prepare_windows.bat  release_centos.sh  release_macos.sh  release_manylinux.sh  release_ubuntu.sh  release_windows.bat  run_bazel_tests.sh  run_build_osx.sh  run_build_ubuntu.sh  run_gtest_nix.sh  run_gtest_windows.bat  set_env_windows.bat  set_env_windows.sh
_layouts/: template.html
benchmarks/: index.md
benchmarks/Linux/: data.js
benchmarks/Windows/: data.js
benchmarks/macOS/: data.js
cmake/: logging.cmake  protobuf.cmake  pybind11.cmake  seal.cmake  tenseal.cmake  tests.cmake  xtensor.cmake
dev/bench/: data.js
docker-images/: Dockerfile-py36  Dockerfile-py37  Dockerfile-py38  Dockerfile-py39
format("{benchmarks/{0}}", Linux)/: data.js
master/bench/: index.html
pip-dep/: requirements_dev.txt
tenseal/: BUILD  __init__.py  binding.cpp  context.cpp  context.h  context.py  deps.bzl  enc_context.py  keygen.cpp  matrix_ops.h  preload.bzl  sealapi.cpp  sealapi.h  serialization.h  tensealcontext.cpp  tensealcontext.h  tensealcontext_test.cpp  tensealencoder.h  utils.cpp  utils.h  version.py
tenseal/context/: BUILD  sealcontext.cpp  sealcontext.h  tensealcontext.cpp  tensealcontext.h  tensealencoder.h
tenseal/cpp/: BUILD  binding.cpp  tenseal.h
tenseal/cpp/context/: BUILD  sealcontext.cpp  sealcontext.h  tensealcontext.cpp  tensealcontext.h  tensealencoder.h
tenseal/cpp/sealapi/: BUILD  sealapi.cpp  sealapi_encode.cpp  sealapi_encrypt.cpp  sealapi_evaluator.cpp  sealapi_helpers.cpp  sealapi_modulus.cpp  sealapi_util_namespace.cpp
tenseal/cpp/tensors/: BUILD  api.h  bfvtensor.cpp  bfvtensor.h  bfvvector.cpp  bfvvector.h  ckkstensor.cpp  ckkstensor.h  ckksvector.cpp  ckksvector.h  encrypted_tensor.h  encrypted_tensor_bfv.h  encrypted_vector.cpp  encrypted_vector.h  plain_tensor.h  tensor.cpp  tensor.h  tensor_storage.h  vector.cpp  vector.h
tenseal/cpp/tensors/utils/: matrix_ops.h  utils.cpp  utils.h
tenseal/cpp/utils/: BUILD  helpers.h  nested_vector.h  proto.h  queue.h  scope.h  serialization.h  threadpool.h
tenseal/interface/: BUILD  binding.cpp
tenseal/interface/sealapi/: sealapi.cpp  sealapi_context.cpp  sealapi_evaluator.cpp  sealapi_helpers.cpp  sealapi_modulus.cpp  sealapi_util_namespace.cpp
tenseal/proto/: BUILD  CMakeLists.txt  __init__.py  tensealcontext.proto  tensors.proto
tenseal/python/: BUILD
tenseal/python/tensors/: BUILD  __init__.py
tenseal/sealapi/: BUILD  __init__.py  bindings.h  sealapi.cpp  sealapi_context.cpp  sealapi_encode.cpp  sealapi_encrypt.cpp  sealapi_evaluator.cpp  sealapi_helpers.cpp  sealapi_modulus.cpp  sealapi_util_namespace.cpp  sealapi_utils.cpp
tenseal/sealapi/util/: __init__.py  util.cpp
tenseal/tensors/: BUILD  __init__.py  abstract_tensor.py  bfv_naive.cpp  bfv_naive.h  bfv_vector.py  bfvnaivevector.cpp  bfvnaivevector.h  bfvtensor.py  bfvvector.cpp  bfvvector.h  bfvvector.py  ckks_tensor.py  ckks_vector.py  ckkstensor.py  ckksvector.cpp  ckksvector.h  ckksvector.py  plain_tensor.py  plaintensor.py
tenseal/tensors/utils/: matrix_ops.h  utils.cpp
tenseal/utils/: BUILD  context.h  matrix_ops.h  serialization.h  utils.cpp  utils.h
tests/: main.py  test.py  test_enc_dec.py  test_sealapi.py  test_serialization.py  test_tensealcontext.py  utils.py
tests/cpp/: BUILD  tensealcontext_test.cpp
tests/cpp/benchmarks/: BUILD  benchmark.cpp
tests/cpp/tensors/: bfvtensor_test.cpp  bfvvector_test.cpp  ckkstensor_test.cpp  ckksvector_test.cpp  plaintensor_test.cpp
tests/python/benchmarks/: test_mnist_eval.py  test_ops.py
tests/python/sealapi/: BUILD  test_context.py  test_encode_decode.py  test_encrypt_decrypt.py  test_evaluator.py  test_keygen.py  test_modulus.py  test_regression.py  test_sanity.py  test_util.py  test_valcheck.py  utils.py
tests/python/tenseal/: BUILD  main.py  test_enc_dec.py  test_regression.py  test_serialization.py  test_tensealcontext.py  test_utils.py
tests/python/tenseal/tensors/: test_bfv_tensor.py  test_bfv_vector.py  test_ckks_tensor.py  test_ckks_vector.py  test_plain_tensor.py  test_regression.py  test_serialization.py
tests/sealapi/: BUILD  test_context.py  test_encode_decode.py  test_encrypt_decrypt.py  test_evaluator.py  test_keygen.py  test_modulus.py  test_regression.py  test_sanity.py  test_util.py  test_valcheck.py  utils.py
tests/tenseal/: BUILD  test_serialization.py
tests/tensors/: test_bfv_vector.py  test_bvf_naive.py  test_bvf_naive_vector.py  test_bvf_vector.py  test_ckks_vector.py  test_perf.py  test_serialization.py
tutorials/: Tutorial 0 - Getting Started.ipynb  Tutorial 1 - Training and Evaluation of Logistic Regression on Encrypted Data.ipynb  Tutorial 2 - Convolution.ipynb  Tutorial 2 - Working with Approximate Numbers.ipynb  Tutorial 3 - Benchmarks.ipynb  Tutorial 4 - Encrypted Convolution on MNIST.ipynb  demo.ipynb
tutorials/experimental/: Convolution.ipynb
tutorials/parameters/: ConvMNIST-0.1.pickle
